--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="28">
     <tr>
       <td>
-    <img src="./image/download.jpg" alt="Kamlesh Chaudhary" style="height: 250px;"></td>
+    <img src="./download.jpg" alt="Kamlesh Chaudhary" style="height: 250px;"></td>
    <td><h1>Kamlesh Chaudhary</h1> 
    <p>I am Student in Thakur College of Engnineering & Technology</p>
    <p>I love to travel across the our country</p>
