--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
    <td><h1>Kamlesh Chaudhary</h1> 
    <p>I am Student in Thakur College of Engnineering & Technology</p>
    <p>I love to travel across the our country</p>
-   <p>I love to write codes in c</p></td>
+   <p>I love to write codes in C</p></td>
    </tr>
    </table>
    <hr>
    <h2>My Education</h2>
    <p> <li>Bachelor of Vocational pursuing from <a href="https://www.tcsc.edu.in/"> Thakur College of Engineering and Technology </a>  </p></li>
-   <p> <li>Complited SSC from gujarat seniour board of eduvation</p></li>
-   <p> <li>Complited HSC from UP Board of Education</p>>
+   <p> <li>Complited SSC from Gujarat seniour board of eduvation</p></li>
+   <p> <li>Complited HSC from UP Board of Education</p>
    <h3> <a href="Hobbies.html"> Hobbies</a></h3>
   <p> I like sports</p>
   <p>In sports i like to play kabbadi</p>
